--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 
     <h2>Hello.</h2>
 
-    <p class="qwer">Iam chikku.This is my chokkan.We are from Kollam.
-      Characteristic features of parrots include a strong, curved bill,
+    <p class="qwer"> Characteristic features of parrots include a strong, curved bill,
       an upright stance, strong legs, and clawed zygodactyl feet.
        Many parrots are vividly coloured, and some are multi-coloured.
         Most parrots exhibit little or no sexual dimorphism in the visual spectrum.</p>
